processed/gerrit/txt/51747.txt
Change:     51747
Subject:    LU-16796 obdclass: Change struct jobid_pid_map to use refcount_t
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/51747
Change-Id:  Ia3458d5605a8cff2bb65476495c321fa98cf01dc
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Arshad Hussain
Created:    2023-07-23 05:49:31.000000000
Updated:    2023-09-19 22:30:08.000000000
Patch Set:  3
Insertions: +16
Deletions:  -12
Comments:   0 (0 unresolved)
Hashtags:   lug23dd, hackathon

--- Labels ---
  Code-Review: James Simmons: +1; Andreas Dilger: +1; Neil Brown: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  CC: Jian Yu
  REVIEWER: Oleg Drokin, Andreas Dilger, James Simmons, Arshad Hussain, Neil Brown, Timothy Day

--- Commit Message ---
LU-16796 obdclass: Change struct jobid_pid_map to use refcount_t

This patch changes struct jobid_pid_map to use
refcount_t(kref) instead of atomic_t

Signed-off-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Change-Id: Ia3458d5605a8cff2bb65476495c321fa98cf01dc
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/51747
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Neil Brown <neilb@suse.de>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Arshad Hussain, 2023-07-23 05:49:31.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2023-07-23 05:52:28.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2023-07-23 06:15:31.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/96397/ : SUCCESS

--- Message (Arshad Hussain, 2023-07-23 09:58:24.000000000) ---
Patch Set 1:

> conf-sanity3@ldiskfs+DNE Failure(5924s)
> 123F(test_123F failed with 203)
> conf-sanity3@zfs Failure(2749s)
> 123F(test_123F failed with 203) 

Looks related to this patch. I am checking.

--- Message (Neil Brown, 2023-07-23 12:19:46.000000000) ---
Patch Set 1:

This atomic_t is being used exactly as a refcount, in that when it goes to zero the object is freed.
So you don't need to add one to all the numbers.  Just do a direct conversion, including using refcount_dec_and_test(), not sub_and_test().

I would probably go futher and make this a kref, not just a refcount_t, but there isn't a big gain from doing that so it is just a suggestion to consider.
One advantage is you use "kref_init()" which knows to initialise to '1'.  You don't need to give and explicit '1' to refcount_set().

--- Message (Arshad Hussain, 2023-07-24 09:03:25.000000000) ---
Uploaded patch set 2.

--- Message (wc-checkpatch, 2023-07-24 09:04:44.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Arshad Hussain, 2023-07-24 09:05:51.000000000) ---
Patch Set 2:

> Patch Set 1:
> 
> This atomic_t is being used exactly as a refcount, in that when it goes to zero the object is freed.
> So you don't need to add one to all the numbers.  Just do a direct conversion, including using refcount_dec_and_test(), not sub_and_test().
> 
> I would probably go futher and make this a kref, not just a refcount_t, but there isn't a big gain from doing that so it is just a suggestion to consider.
> One advantage is you use "kref_init()" which knows to initialise to '1'.  You don't need to give and explicit '1' to refcount_set().

Done. Thanks!

--- Message (jenkins, 2023-07-24 09:28:30.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/96401/ : SUCCESS

--- Message (Autotest, 2023-07-24 23:26:18.000000000) ---
Patch Set 2:

Onyx Autotest retesting enforced review-dne-part-1 session on el8.8-x86_64/ldiskfs servers and clients for build 96401 patch 2. Requested by Neil Brown because of LU-16541.

--- Message (Autotest, 2023-07-24 23:28:37.000000000) ---
Patch Set 2:

Onyx Autotest retesting enforced review-dne-zfs-part-1 session on el8.8-x86_64/zfs servers and clients for build 96401 patch 2. Requested by Neil Brown because of LU-16743.

--- Message (Neil Brown, 2023-07-24 23:28:48.000000000) ---
Patch Set 2: Code-Review+1

Looks good, thanks.

--- Message (Andreas Dilger, 2023-07-25 01:02:24.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Timothy Day, 2023-07-25 05:08:42.000000000) ---
Patch Set 2: Code-Review+1

--- Message (James Simmons, 2023-07-26 14:25:13.000000000) ---
Patch Set 2: Code-Review+1

--- Message (Oleg Drokin, 2023-08-01 06:15:49.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Oleg Drokin, 2023-08-01 06:15:54.000000000) ---
Change has been successfully cherry-picked as 616e2c9e34384604027508488e55bf93635b3098 by Oleg Drokin

--- Message (Jian Yu, 2023-08-03 22:08:57.000000000) ---
Patch Set 3:

The patch introduces the following build error against kernel 6.2.0:

   CC [M]  /root/lustre-release/lustre/obdclass/jobid.o
 In file included from include/linux/string.h:253,
                  from include/linux/bitmap.h:11,
                  from include/linux/cpumask.h:12,
                  from ./arch/x86/include/asm/paravirt.h:17,
                  from ./arch/x86/include/asm/cpuid.h:62,
                  from ./arch/x86/include/asm/processor.h:19,
                  from ./arch/x86/include/asm/cpufeature.h:5,
                  from ./arch/x86/include/asm/thread_info.h:53,
                  from include/linux/thread_info.h:60,
                  from ./arch/x86/include/asm/preempt.h:9,
                  from include/linux/preempt.h:78,
                  from include/linux/spinlock.h:56,
                  from include/linux/kref.h:16,
                  from include/linux/user_namespace.h:5,
                  from /root/lustre-release/lustre/obdclass/jobid.c:35:
 In function ‘fortify_memset_chk’,
      inlined from ‘jobid_put_locked_free’ at /root/lustre-release/lustre/obdclass/jobid.c:831:2,
      inlined from ‘kref_put’ at include/linux/kref.h:65:3,
      inlined from ‘jobid_put_locked’ at /root/lustre-release/lustre/obdclass/jobid.c:843:2:
 include/linux/fortify-string.h:423:25: error: call to ‘__write_overflow_field’ declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror=attribute-warning]
   423 |                         __write_overflow_field(p_size_field, size);
       |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 cc1: all warnings being treated as errors

--- Message (Neil Brown, 2023-08-03 22:34:00.000000000) ---
Patch Set 3:

> Patch Set 3:
> 
> The patch introduces the following build error against kernel 6.2.0:

I cannot make sense of that error.  It seems to suggest that memset() is being used on a field in a structure, with a size larger than that field.  But the only memset I can find at that line is the POISON() call in OBD_FREE() which is passed the whole structure, not a field within the structure.

Strange.

--- Message (Arshad Hussain, 2023-08-18 06:48:48.000000000) ---
Patch Set 3:

> Patch Set 3:
> 
> The patch introduces the following build error against kernel 6.2.0:
> 
>    CC [M]  /root/lustre-release/lustre/obdclass/jobid.o
>  In file included from include/linux/string.h:253,
>                   from include/linux/bitmap.h:11,
>                   from include/linux/cpumask.h:12,
>                   from ./arch/x86/include/asm/paravirt.h:17,
>                   from ./arch/x86/include/asm/cpuid.h:62,
>                   from ./arch/x86/include/asm/processor.h:19,
>                   from ./arch/x86/include/asm/cpufeature.h:5,
>                   from ./arch/x86/include/asm/thread_info.h:53,
>                   from include/linux/thread_info.h:60,
>                   from ./arch/x86/include/asm/preempt.h:9,
>                   from include/linux/preempt.h:78,
>                   from include/linux/spinlock.h:56,
>                   from include/linux/kref.h:16,
>                   from include/linux/user_namespace.h:5,
>                   from /root/lustre-release/lustre/obdclass/jobid.c:35:
>  In function ‘fortify_memset_chk’,
>       inlined from ‘jobid_put_locked_free’ at /root/lustre-release/lustre/obdclass/jobid.c:831:2,
>       inlined from ‘kref_put’ at include/linux/kref.h:65:3,
>       inlined from ‘jobid_put_locked’ at /root/lustre-release/lustre/obdclass/jobid.c:843:2:
>  include/linux/fortify-string.h:423:25: error: call to ‘__write_overflow_field’ declared with attribute warning: detected write beyond size of field (1st parameter); maybe use struct_group()? [-Werror=attribute-warning]
>    423 |                         __write_overflow_field(p_size_field, size);
>        |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
>  cc1: all warnings being treated as errors

Hi Neil, thanks for the inputs. I will look into this.

Hi Jian, Sorry, I completely missed your note. I do not immediately have any 6.x kernel. However, I will get to this error. Thanks for letting me know.

--- Message (Jian Yu, 2023-08-18 20:57:41.000000000) ---
Patch Set 3:

Thank you Arshad and Neil.

--- Message (Andreas Dilger, 2023-09-19 22:30:01.000000000) ---
Hashtag added: hackathon

--- Message (Andreas Dilger, 2023-09-19 22:30:08.000000000) ---
Hashtag added: lug23dd
